# solochain-substrate-template

./: .gitignore  AUDIT_FINDINGS.md  CLAUDE.md  Cargo.toml  README.md  SECURITY_FIXES_TASKS.md  ecosystem.config.js  rust-toolchain.toml
.github/workflows/: ci.yml
chainspecs/local/: spec.json  specRaw.json
consensus/micc/: Cargo.toml  README.md
consensus/micc-client/: Cargo.toml  README.md
consensus/micc-client/src/: event_driven.rs  import_queue.rs  lib.rs  monitoring.rs  security_integration_tests.rs  standalone.rs
consensus/micc-primitives/: Cargo.toml  README.md
consensus/micc-primitives/src/: digests.rs  inherents.rs  lib.rs
consensus/micc/src/: equivocation.rs  lib.rs  mock.rs  security_tests.rs  tests.rs
consensus/slots/: Cargo.toml  README.md
consensus/slots/src/: lib.rs  slots.rs
docs/: AUDIT_FINDINGS.md  ENVIRONMENT_CONFIGURATION.md  Genesis_Rebase_Strategy.md  PRODUCTION_SECURITY_GUIDE.md  SECURITY_FIXES_TASKS.md  SECURITY_VALIDATION.md
node/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/rate-limiter/: Cargo.toml
pallets/rate-limiter/src/: extensions.rs  lib.rs  transaction_extension.rs
runtime/: Cargo.toml
runtime/src/: apis.rs  genesis_config_presets.rs  lib.rs
runtime/src/configs/: environments.rs  mod.rs
scripts/: README.md  build-environment.sh  build_spec.sh  generate-production-keys.sh  insert_keys.sh  run_node.sh  run_node_x.sh  start-3-nodes.sh  start-blockchain.sh  stop-nodes.sh  test-network.sh
tester/: README.md  README_TPS_TESTING.md  package.json  run_tests.sh  stress_metrics.sh  system_remark.js  throughput_analyzer.js  tps_monitor.sh
