[package]
name = "sc-consensus-micc"
version = "0.45.0"
authors.workspace = true
description = "Micc consensus algorithm for substrate"
edition.workspace = true
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository.workspace = true
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
async-trait = { workspace = true }
codec = { workspace = true, default-features = true }
futures = { workspace = true }
log = { workspace = true, default-features = true }
thiserror = { workspace = true }
tokio = { workspace = true, default-features = true }
tokio-stream = { workspace = true }
prometheus-endpoint.workspace = true
prometheus-endpoint.default-features = true
sc-block-builder.workspace = true
sc-block-builder.default-features = true
sc-client-api.workspace = true
sc-client-api.default-features = true
sc-consensus.workspace = true
sc-consensus.default-features = true
sc-consensus-slots.workspace = true
sc-consensus-slots.default-features = true
sc-telemetry.workspace = true
sc-telemetry.default-features = true
sp-api.workspace = true
sp-api.default-features = true
sp-application-crypto.workspace = true
sp-application-crypto.default-features = true
sp-block-builder.workspace = true
sp-block-builder.default-features = true
sp-blockchain.workspace = true
sp-blockchain.default-features = true
sp-consensus.workspace = true
sp-consensus.default-features = true
sp-consensus-micc.workspace = true
sp-consensus-micc.default-features = true
sp-consensus-slots.workspace = true
sp-consensus-slots.default-features = true
sp-core.workspace = true
sp-core.default-features = true
sp-inherents.workspace = true
sp-inherents.default-features = true
sp-keystore.workspace = true
sp-keystore.default-features = true
sp-runtime.workspace = true
sp-runtime.default-features = true
sc-transaction-pool-api.workspace = true
sc-transaction-pool-api.default-features = true

[dev-dependencies]
parking_lot = { workspace = true, default-features = true }
tempfile = { workspace = true }
sc-keystore = { default-features = true, workspace = true }
sc-network = { default-features = true, workspace = true}
sp-keyring = { default-features = true, workspace = true  }
sp-timestamp = { default-features = true, workspace = true  }
sp-tracing = { default-features = true, workspace = true  }
substrate-test-runtime-client = { workspace = true  }
tokio = { workspace = true, default-features = true }
