[package]
name = "pallet-rate-limiter"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license = "Unlicense"
homepage.workspace = true
repository.workspace = true
description = "Rate limiting pallet for spam protection in fee-free transactions"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive"], workspace = true }
scale-info = { features = ["derive"], workspace = true }

frame-benchmarking = { optional = true, workspace = true }
frame-support.workspace = true
frame-system.workspace = true

sp-runtime.workspace = true
sp-std.workspace = true
pallet-timestamp.workspace = true

log = { workspace = true }

[dev-dependencies]
sp-core.workspace = true
sp-io.workspace = true

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-benchmarking?/std",
    "frame-support/std",
    "frame-system/std",
    "scale-info/std",
    "sp-runtime/std",
    "sp-std/std",
    "pallet-timestamp/std",
    "log/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "pallet-timestamp/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
    "pallet-timestamp/try-runtime",
    "sp-runtime/try-runtime",
]